# StateMachining

./: CMakeLists.txt  LICENSE  vcpkg.json
Source/: CMakeLists.txt  State.h
Tests/: CMakeLists.txt  Tests.cpp
Tests/Basic/: FsmTests.cpp
